--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.3",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-draw": "^0.21.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.5.0",
@@ -23,6 +27,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/leaflet": "^1.9.20",
+    "@types/leaflet-draw": "^1.0.13",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
