--- a/local.example.env
+++ b/local.example.env
@@ -2,3 +2,4 @@ VITE_IS_PROD=FALSE
 
 VITE_API_BASE_URL_LOCAL=http://localhost:3000
 VITE_API_BASE_URL_PROD=https://agro-repo-backend.onrender.com
+VITE_API_BASE_URL_PARCELAS = http://localhost:3002/
